Chat overflow to prevent vietnamese shit

--- a/resources/css/chat.scss
+++ b/resources/css/chat.scss
@@ -95,6 +95,7 @@ html.chat body,
     padding-left: 64px;
     padding-right: 48px;
     margin-top: 1.0625rem;
+    overflow: hidden;
 
     // Left-hand content
     .left-content {}
